# gaf

./: Cargo.toml  README.md
src/: calendar.rs  main.rs  uptime.rs  weather.rs
